User 관련 클래스 수정 User.java: getAuthorities()에 Collections.emptyList();
WebSecurityConfig.java: permitAll() 추가